--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,15 @@
 .heightscreen{
     height:calc(100vh - 85px)!important;
 }
-body{
-    background: gray;
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
 }
