--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,3 +21,89 @@ video{
     object-fit: cover;
 
 }
+
+
+  
+ 
+  
+  .bun {
+    bottom: 10px;
+    right: 10px;
+     padding: 2px;
+     width: 30px;
+    min-height: 30px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 22px;
+    position: fixed;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 400;
+    color: white;
+    background: #dc2626;
+  background: linear-gradient(90deg, rgb(204, 74, 74) 0%, rgrgb(156, 16, 16)00%);
+    border: none;
+    border-radius: 100px;
+    box-shadow: 10px 10px 28px rgb(238, 49, 49);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    
+    padding: 4px 4px 4px;
+    margin: 10px
+    
+    }
+  
+  .bun::before {
+  content: '';
+    border-radius: 1000px;
+    min-width: calc(35px + 1px);
+    min-height: calc(25px + 10px);
+    border: 4px solid rgb(224, 83, 83);
+    box-shadow: 0 0 60px rgba(245, 40, 4, 0.64);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+  }
+  
+  .bun:hover, .bun:focus {
+    color: rgb(235, 219, 219);
+    transform: translateY(-8px);
+  }
+  
+  .bun:hover::before, .bun:focus::before {
+    opacity: 1;
+  }
+  
+  .bun::after {
+    content: '';
+    width: 3px; height: 39px;
+    border-radius: 100%;
+    border: 2px solid red;
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
+  }
+  
+  .bun:hover::after, .bun:focus::after {
+    animation: none;
+    display: none;
+  }
+  
+  @keyframes ring {
+    0% {
+      width: 30px;
+      height: 30px;
+      opacity: 1;
+    }
+    100% {
+      width: 300px;
+      height: 300px;
+      opacity: 0;
+    }
+  }
